# sendle

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: ci.yml
src/: config.rs  lib.rs  mailer.rs  main.rs
src/config/: file.rs  mod.rs
src/subcommand/: config.rs  mod.rs  send.rs
