[package]
# TODO: パッケージ名は変更したい
name = "kindle_push"
version = "0.1.0"
authors = ["t-yng <t.yng.greenmonkey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"

# リリースされている最新のバージョンだとmasterブランチのexampleが試せないため、masterブランチを参照するようにしています。
lettre = { git = "https://github.com/lettre/lettre", branch = "master" }
