[package]
name = "sendle"
version = "0.2.0"
authors = ["t-yng <t.yng.greenmonkey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"

# リリースされている最新のバージョンだとmasterブランチのexampleが試せないため、masterブランチを参照するようにしています。
lettre = { git = "https://github.com/lettre/lettre", branch = "master" }
dotenv = "0.15.0"
toml = "0.5.6"
serde = "1.0.110"
serde_derive = "1.0.110"
home = "0.5.3"
cfg-if = "0.1.10"
colored = "1.9.3"
rpassword = "4.0.5"

[dev-dependencies]
mockall = "0.7.1"
